this will add operator functionality

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -13,10 +13,10 @@
     <input type="number" placeholder="?" id="firstNumber">
     <button class="operators">+</button>
     <button class="operators">-</button>
-    <button class="operators">X</button>
-    <button class="operators">&#247</button>
+    <button class="operators">*</button>
+    <button class="operators">/</button>
     <input type="number" placeholder="?" id="lastNumber">
-    <button class="operators">=</button>
+    <button id="equalsButton">=</button>
     <button class="operators">C</button>
 
     <h3>Output: </h3>
