appended operations to DOM take 2

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -19,7 +19,7 @@
     <button id="equalsButton">=</button>
     <button class="operators">C</button>
 
-    <h3 id="operatorOutput"></h3>
+    <h3 id="operatorOutput">Your Calculation: </h3>
 
     <h3>History</h3>
     
