--- a/server/public/index.html
+++ b/server/public/index.html
@@ -20,8 +20,8 @@
     <button class="operators">C</button>
 
     <h3 id="operatorOutput">Your Calculation: </h3>
-
-    <h3>History</h3>
-    
+    <div>
+    <h3 id="outputDiv">History</h3>
+    </div>
 </body>
 </html>
